--- a/Welcome_page.html
+++ b/Welcome_page.html
@@ -80,7 +80,7 @@
         </div>
         </div>
     </header>
-    <div class="distance d-flex margin">
+    <div class="distance d-flex  ">
         <p class="text_logo">Simple recipes for delicious dishes</p>
     </div>
     <main>
