--- a/Breakfest.html
+++ b/Breakfest.html
@@ -383,7 +383,7 @@
                         </ul>
                     </div>
                     <div class="Lets_cook ">
-                        <button class="custom-btn btn-10">
+                        <button class="custom-btn btn">
                             <a href="">Lets cook</a>
                     </div>
 
