changing the name of the class

--- a/Breakfest.html
+++ b/Breakfest.html
@@ -324,7 +324,7 @@
                     </div>
 
                     <div class="Lets_cook center ">
-                        <button class="custom-btn btn-10">
+                        <button class="custom-btn btn">
                             <a href="Lets_cook.html">Lets cook</a>
                     </div>
                 </div>
