--- a/Breakfest.html
+++ b/Breakfest.html
@@ -79,9 +79,8 @@
             </div>
         </div>
     </header>
-    <div class="margin"></div>
 
-    <div class="distance d-flex">
+    <div class="distance d-flex margin">
         <p class="text_logo"><i class="fa-solid fa-utensils"></i> Breakfast Recipes <i class="fa-solid fa-utensils"></i>
         </p>
     </div>
@@ -135,7 +134,7 @@
                     </div>
 
                     <div class="Lets_cook center ">
-                        <button class="custom-btn btn-10">
+                        <button class="custom-btn btn">
                             <a href="Lets_cook.html">Lets cook</a>
                     </div>
                 </div>
@@ -152,7 +151,7 @@
                             <p>BREAKFAST</p>
                             <p><i class="fa-regular fa-clock"></i> 43mins</p>
                         </div>
-                        <div class="ricipe_name">
+                        <div class="ricipe_name center">
                             <p class="text_logo">
                                 Kale and Mushroom Egg Bites</p>
                         </div>
@@ -185,7 +184,7 @@
                     </div>
 
                     <div class="Lets_cook center ">
-                        <button class="custom-btn btn-10">
+                        <button class="custom-btn btn">
                             <a href="Lets_cook.html">Lets cook</a>
                     </div>
                 </div>
@@ -196,13 +195,13 @@
             <div class="item_breakfest">
                 <div class="image_breakfest breakfest_3"></div>
                 <div class="recipe">
-                    <div class="border_recipe">
+                    <div class="border_recipe center">
                         <div class="text_top d-flex">
                             <p>BREAKFAST</p>
                             <p><i class="fa-regular fa-clock"></i> 35mins</p>
 
                         </div>
-                        <div class="ricipe_name">
+                        <div class="ricipe_name center">
                             <p class="text_logo">
                                 Bacon and Gruyère Egg Bites</p>
                         </div>
@@ -233,7 +232,7 @@
                     </div>
 
                     <div class="Lets_cook center ">
-                        <button class="custom-btn btn-10">
+                        <button class="custom-btn btn">
                             <a href="Lets_cook.html">Lets cook</a>
                     </div>
                 </div>
@@ -248,7 +247,7 @@
                         <div class="text_top d-flex">
                             <p>BREAKFAST</p>
                         </div>
-                        <div class="ricipe_name">
+                        <div class="ricipe_name center">
                             <p class="text_logo">
                                 Roasted Red Pepper, Chive, and Chèvre Egg Bites</p>
                         </div>
@@ -280,7 +279,7 @@
                     </div>
 
                     <div class="Lets_cook center ">
-                        <button class="custom-btn btn-10">
+                        <button class="custom-btn btn">
                             <a href="Lets_cook.html">Lets cook</a>
                     </div>
                 </div>
@@ -295,7 +294,7 @@
                         <div class="text_top d-flex">
                             <p>BREAKFAST</p>
                         </div>
-                        <div class="ricipe_name">
+                        <div class="ricipe_name center">
                             <p class="text_logo">
                                 French Omelette</p>
                         </div>
@@ -339,7 +338,7 @@
                         <div class="text_top d-flex">
                             <p>BREAKFAST</p>
                         </div>
-                        <div class="ricipe_name">
+                        <div class="ricipe_name center">
                             <p class="text_logo">
                                 Spinach and Artichoke Quiche</p>
                         </div>
