--- a/Lets_cook.html
+++ b/Lets_cook.html
@@ -80,11 +80,10 @@
         </div>
         </div>
     </header>
-    <div class="margin"></div>
 
     <main>
-        <div class="container d-flex column">
-            <div class="blok_1 d-flex">
+        <div class="container d-flex  column">
+            <div class="blok_header d-flex">
                 <div class="column_1">
                     <div class="name_page  center">
                         <p class="text_logo">Sourdough Pancakes</p>
@@ -114,7 +113,7 @@
 
                 <!-- FIRST STEP -->
 
-                <div class="first_step">
+                <div class="step">
                     <div class="text_logo center">
                         <p></p> Combine the dry ingredients:</p>
                     </div>
@@ -127,7 +126,7 @@
 
                 <!-- SECOND STEP -->
 
-                <div class="first_step">
+                <div class="step">
                     <div class="text_logo center">
                         <p></p>Separate the eggs.</p>
                     </div>
@@ -136,7 +135,7 @@
 
                 <!-- THIRD STEP -->
 
-                <div class="first_step">
+                <div class="step">
                     <div class="text_logo center">
                         <p></p> Combine the wet ingredients:</p>
                     </div>
@@ -150,7 +149,7 @@
 
                 <!-- FOURTH STEP -->
 
-                <div class="first_step">
+                <div class="step">
                     <div class="text_logo center">
                         <p></p> Make the batter:</p>
                     </div>
@@ -166,7 +165,7 @@
 
                 <!-- FIFTH STEP -->
 
-                <div class="first_step">
+                <div class="step">
                     <div class="text_logo center">
                         <p></p> Whip the egg whites</p>
                     </div>
@@ -188,7 +187,7 @@
 
                 <!-- SIXTH STEP -->
 
-                <div class="first_step">
+                <div class="step">
                     <div class="text_logo center">
                         <p></p> Preheat your oven:</p>
                     </div>
@@ -201,7 +200,7 @@
 
                 <!-- SEVENTH STEP -->
 
-                <div class="first_step">
+                <div class="step">
                     <div class="text_logo center">
                         <p></p> Cook the pancakes:</p>
                     </div>
@@ -234,12 +233,10 @@
     <div class="distance d-flex">
         <p class="text_logo">Bon appetit!!!</p>
     </div>
-    <footer>
-        <div class="header-logo d-flex">
-            <a href="Ukraine.html">
-                <p class="text_logo"><i class="fa-solid fa-utensils"></i> Good_Recipes</p>
-            </a>
-        </div>
+    <footer class=" d-flex">
+        <a href="Welcome_page.html">
+            <p class="text_logo"><i class="fa-solid fa-utensils"></i> Good_Recipes</p>
+        </a>
     </footer>
 </body>
 
