--- a/Breakfest.html
+++ b/Breakfest.html
@@ -396,9 +396,40 @@
     </div>
 
     <footer class=" d-flex">
-        <a href="Welcome_page.html">
-            <p class="text_logo"><i class="fa-solid fa-utensils"></i> Good_Recipes</p>
-        </a>
+        <div class="first_column ">
+            <a href="Welcome_page.html">
+                <p class="text_logo"><i class="fa-solid fa-utensils"></i> Good_Recipes</p>
+            </a>
+            <div class="lets_be_frends d-flex">LET’S BE FRIENDS!
+                <a href="https://github.com/2403girl"><i class="fa-brands fa-github"></i></a>
+                <a href="linkedin.com/in/mariana-lohush"><i class="fa-brands fa-linkedin-in"></i></a>
+                <a href="https://www.facebook.com/mariana.fedoriv"><i class="fa-brands fa-facebook"></i></a>
+                <a href="https://www.instagram.com/logushm/"><i class="fa-brands fa-instagram"></i></a>
+            </div>
+        </div>
+        <div class="second_column ">
+            <ul class="menu ">
+                <li>
+                    <a href="" class="menu-item" ">Recipes</a>
+            </li>
+            <li>
+                <a href="" class=" menu-item" ">Video</a>
+            </li>
+            <li>
+                <a href="" class=" menu-item" ">About</a>
+            </li>
+            <li>
+                <a href="" class=" menu-item" target="_blank">Contact</a>
+                </li>
+                <li>
+                    <div class="seach">
+                        <input type="text" class="searchTerm" placeholder="Find a recipe">
+                        <button type="submit" class="searchButton">
+                            <i class="fa fa-search"></i>
+                    </div>
+                </li>
+            </ul>
+        </div>
     </footer>
 </body>
 
