--- a/Sourdough Pancakes.html
+++ b/Sourdough Pancakes.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
     <link rel="stylesheet" href="./welcome_page.css">
     <link rel="stylesheet" href="./breakfest.css">
-    <link rel="stylesheet" href="./Lets_cook.css">
+    <link rel="stylesheet" href="./Sourdough Pancakes.css">
 </head>
 
 <body>
