--- a/Breakfest.html
+++ b/Breakfest.html
@@ -21,9 +21,6 @@
                 <div class="header-menu ">
                     <ul class="menu d-flex">
                         <li>
-                            <a href="" class="menu-item">Recipes</a>
-                        </li>
-                        <li>
                             <a href="" class="menu-item">Video</a>
                         </li>
                         <li>
@@ -54,7 +51,7 @@
                     <div id="site-menu">
                         <ul id="site-menu-titles">
                             <li>
-                                <a href="" class="menu_mobile-item">Recipes</a>
+                                <a href="Welcome_page.html" class="menu_mobile-item" ">Recipes</a>
                             </li>
                             <li>
                                 <a href="" class="menu_mobile-item">Video</a>
@@ -135,7 +132,7 @@
 
                     <div class="Lets_cook center ">
                         <button class="custom-btn btn">
-                            <a href="Lets_cook.html">Lets cook</a>
+                            <a href="Sourdough Pancakes.html">Lets cook</a>
                     </div>
                 </div>
 
@@ -357,13 +354,15 @@
                         <p><i class="fa-solid fa-utensils"></i> Ingredients</p>
                     </div>
                     <div class="list_of_ingredients">
-                        <ul> <p> Crust:</p>
+                        <ul>
+                            <p> Crust:</p>
                             <li>1 cup all-purpose flour</li>
                             <li>1/2 teaspoon salt</li>
                             <li>1/2 cup (1 stick, 4 ounces, 8 tablespoons) butter</li>
                             <li>2 to 2 1/2 tablespoons water</li>
                         </ul>
-                        <ul> <p> Quiche:</p>
+                        <ul>
+                            <p> Quiche:</p>
                             <li>1/2 cup, packed, finely chopped artichoke hearts (cooked fresh or canned artichoke
                                 hearts packed in water)</li>
                             <li>6 ounces cooked spinach (if using frozen, thaw first), squeezed to remove excess water
@@ -410,10 +409,7 @@
         <div class="second_column ">
             <ul class="menu ">
                 <li>
-                    <a href="" class="menu-item" ">Recipes</a>
-            </li>
-            <li>
-                <a href="" class=" menu-item" ">Video</a>
+                    <a href="" class=" menu-item" ">Video</a>
             </li>
             <li>
                 <a href="" class=" menu-item" ">About</a>
