--- a/Sourdough Pancakes.html
+++ b/Sourdough Pancakes.html
@@ -22,9 +22,6 @@
                 <div class="header-menu ">
                     <ul class="menu d-flex">
                         <li>
-                            <a href="" class="menu-item" ">Recipes</a>
-                        </li>
-                        <li>
                             <a href="" class=" menu-item" ">Video</a>
                         </li>
                         <li>
@@ -55,7 +52,7 @@
                     <div id="site-menu">
                         <ul id="site-menu-titles">
                             <li>
-                                <a href="" class="menu_mobile-item" ">About us</a>
+                                <a href="Welcome_page.html" class="menu_mobile-item" ">Recipes</a>
                             </li>
                             <li>
                                 <a href="" class=" menu_mobile-item" ">Video</a>
@@ -130,7 +127,7 @@
                     <div class="text_logo center">
                         <p></p>Separate the eggs.</p>
                     </div>
-                    <img src="./image/second_step.webp" width="100%" alt="">
+                    <img src="./image/Sourdough Pancakes/second_step.webp" width="100%" alt="">
                 </div>
 
                 <!-- THIRD STEP -->
@@ -182,7 +179,7 @@
                             not to knock the air out of the whites
                             by folding too aggressively.</p>
                     </div>
-                    <img src="./image/FIFTH_STEP.webp" width="100%" alt="">
+                    <img src="./image/Sourdough Pancakes/FIFTH_STEP.webp" width="100%" alt="">
                 </div>
 
                 <!-- SIXTH STEP -->
@@ -226,7 +223,7 @@
                             <br>
                         </p>
                     </div>
-                    <img src="./image/seven_step.webp" alt="">
+                    <img src="./image/Sourdough Pancakes/seven_step.webp" alt="">
                 </div>
             </div>
     </main>
@@ -247,9 +244,6 @@
         </div>
         <div class="second_column ">
             <ul class="menu ">
-                <li>
-                    <a href="" class="menu-item" ">Recipes</a>
-            </li>
             <li>
                 <a href="" class=" menu-item" ">Video</a>
             </li>
