--- a/Welcome_page.html
+++ b/Welcome_page.html
@@ -20,9 +20,6 @@
                 <div class="header-menu ">
                     <ul class="menu d-flex">
                         <li>
-                            <a href="" class="menu-item" ">Recipes</a>
-                        </li>
-                        <li>
                             <a href="" class=" menu-item" ">Video</a>
                         </li>
                         <li>
@@ -53,7 +50,7 @@
                     <div id="site-menu">
                         <ul id="site-menu-titles">
                             <li>
-                                <a href="" class="menu_mobile-item" ">About us</a>
+                                <a href="Welcome_page.html" class="menu_mobile-item" ">Recipes</a>
                             </li>
                             <li>
                                 <a href="" class=" menu_mobile-item" ">Video</a>
@@ -166,10 +163,7 @@
         <div class="second_column ">
             <ul class="menu ">
                 <li>
-                    <a href="" class="menu-item" ">Recipes</a>
-            </li>
-            <li>
-                <a href="" class=" menu-item" ">Video</a>
+                    <a href="" class=" menu-item" ">Video</a>
             </li>
             <li>
                 <a href="" class=" menu-item" ">About</a>
